# erofs-rs

./: Cargo.toml  README.md
erofs/: Cargo.toml
erofs-cli/: Cargo.toml
erofs-cli/src/: dump.rs  inspect.rs  main.rs
erofs-poc/: Cargo.toml
erofs/src/: dirent.rs  error.rs  filesystem.rs  lib.rs  types.rs
erofs/src/async/: dirent.rs  file.rs  filesystem.rs  mod.rs  walkdir.rs
erofs/src/backend/: mod.rs  opendal.rs
erofs/src/decomp/: mod.rs
erofs/src/sync/: dirent.rs  file.rs  filesystem.rs  mod.rs  walkdir.rs
xattr-parser/src/: main.rs
