[package]
name = "erofs-cli"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[[bin]]
name = "erofs-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = false, features = [
    "std",
    "clock",
] }
clap = { workspace = true, default-features = true, features = ["derive"] }
erofs-rs = { path = "../erofs", features = ["opendal"] }
memmap2 = { workspace = true, default-features = true }
opendal = { workspace = true, default-features = true, features = ["services-http"] }
tar = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["full"] }
url = { workspace = true, default-features = true }
uuid = { workspace = true, default-features = true }
