[package]
name = "erofs-rs"
version = "0.1.1"
edition = "2024"
authors = ["Dreamacro"]
description = "A pure Rust library for reading EROFS (Enhanced Read-Only File System) images"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dreamacro/erofs-rs"
keywords = ["erofs", "filesystem", "readonly", "linux"]
categories = ["filesystem"]
readme = "../README.md"
rust-version = "1.89"

[lints]
workspace = true

[features]
default = ["std"]
std = [
  "dep:memmap2",
  "thiserror/std",
  "bytes/std",
  "binrw/std",
  "rustix/std",
  "typed-path/std",
]
opendal = ["dep:opendal"]

[dependencies]
binrw = { workspace = true }
bitflags = { workspace = true }
bytes = { workspace = true }
memmap2 = { workspace = true, default-features = true, optional = true }
opendal = { workspace = true, optional = true }
rustix = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
typed-path = { workspace = true }
